tests/typing/faulty_ops.sy
start :: fn {
    1 + 1
    "abc" + 1

    (1, 2) + (3, 4) * 1

    !true
    !1
    -1

    1 in {1, 2, 3}
    1 in {"abc", "abc"}
}
// error: $BinOp { .. }
// error: $BinOp { .. }
// error: $UniOp { .. }
// error: $BinOp { .. }
